--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
-  text-align: center;
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: honeydew;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input, select{
+    width: calc(100% - 20px);
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid gray;
+    border-radius: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+label{
+    margin-bottom: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+select{
+    width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+label{
+    font-size: small;
+    align-self: flex-start;
+}
+
+button{
+    width: 100%;
+    height: 40px;
+    margin: 10px;
+    background-color: green;
+    color: white;
+    border: 1px solid gray;
+    border-radius: 0;
+}
+
+button:hover{
+    background-color: darkgreen;
+}
+
+@media(max-width: 800px){
+    form{
+        width: 70%;
+    }
 }
